openshift/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fastapi-demo
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
